Runtime.getRuntime относитеьное исполнение