@@ -68,8 +68,8 @@ public class ProcessModel {
         String line ;
 
         /* Linux */
-        Process p = Runtime.getRuntime().exec(pathUpdate);
-
+       //Process p = Runtime.getRuntime().exec(pathUpdate);
+        Process p = Runtime.getRuntime().exec(new String[]{"bush", "cd","/u02/1.40.0.285/1.40.0.285/SQL/","DBUpdate.sh"});
         /* Windows test */
         // Process p = Runtime.getRuntime().exec(new String[]{"cmd", "/c","type","order.log"});
 
